--- a/_sass/partials/_project.scss
+++ b/_sass/partials/_project.scss
@@ -55,9 +55,9 @@
     }
 
     &__title {
-        font-size: $fs-headline * 3;
+        font-size: $fs-headline;
         font-family: $ff-heading;
-        line-height: 0.9;
+        line-height: $lh-headline;
 
         margin: 0;
 
@@ -68,9 +68,10 @@
     }
 
     &__subtitle {
-        font-size: $fs-headline;
+        font-size: $fs-title-small;
         font-family: $ff-text;
         font-style: italic;
+        line-height: $lh-title-small;
 
         margin: 0;
 
@@ -101,7 +102,7 @@
     border: $hr;
 
     &__title {
-        font-size: 20px;
+        font-size: $fs-title-small;
         font-family: $ff-heading;
         letter-spacing: 0.5px;
 
@@ -110,7 +111,7 @@
         color: $c-yellow;
 
         &--small {
-            font-size: 16px;
+            font-size: $fs-text-small;
 
             margin: 0;
 
@@ -122,18 +123,19 @@
       display: block;
       margin: 0 0 10px;
 
-        .tech-specs__text:after { content: ","; }
-        .tech-specs__text:last-child:after { content: ""; }
+      .tech-specs__text:after { content: ","; }
+      .tech-specs__text:last-child:after { content: ""; }
     }
 
     &__text,
     &__link {
         font-family: $ff-text;
+        font-size: $fs-text-small;
 
         display: inline-block;
         margin: 0 0 10px;
 
-        color: $c-gray;
+        color: $fc-text-light;
     }
 
     &__text--comma { display: inline; }
@@ -143,7 +145,7 @@
       transition: color ease 0.25s;
 
       @include hoverActiveFocus {
-        color: $c-yellow;
+        color: $fc-link-hover;
       }
     }
 
@@ -161,6 +163,18 @@
 }
 
 @media (min-width: $media-query-tablet) {
+  .cover {
+      &__title {
+          font-size: $fs-headline * 3;
+          line-height: $fs-headline * 2.5;
+      }
+
+      &__subtitle {
+          font-size: $fs-headline;
+          line-height: $lh-headline;
+      }
+  }
+
   .tech-specs {
       &--fixed {
           position: fixed;
@@ -171,7 +185,19 @@
     }
 }
 
-@media (min-width: $media-query-tablet) {
+@media (min-width: $media-query-desktop) {
+  .cover {
+      &__title {
+          font-size: $fs-headline * 3;
+          line-height: $fs-headline * 2.5;
+      }
+
+      &__subtitle {
+          font-size: $fs-headline;
+          line-height: $lh-headline;
+      }
+  }
+
   .tech-specs {
       &--fixed {
           width: 220px;
