Adjustments for publication and first blog post

--- a/css/main.scss
+++ b/css/main.scss
@@ -26,3 +26,12 @@
         "partials/projects",
         "partials/project",
         "partials/contact";
+
+.image-caption {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  margin-bottom: 36px;
+}
