added github icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,10 @@
       -->
 
       <li class="header__item">
+        <a class="js-header__link header__link header__icon icon icon--github3" href="{{ site.data.strings.github }}" target='_blank' ></a>
+      </li>
+
+      <li class="header__item">
         <a class="js-header__link header__link header__icon icon icon--facebook" href="{{ site.data.strings.facebook }}" target='_blank' ></a>
       </li>
     </ul>
