--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,10 @@
       </div> -->
 
       <li class="footer__item">
+        <a class="footer__item-link footer__item-link footer__icon icon icon--github3" href="{{ site.data.strings.github }}" target='_blank' ></a>
+      </li>
+
+      <li class="footer__item">
         <a class="footer__item-link footer__item-link footer__icon icon icon--facebook" href="{{ site.data.strings.facebook }}" target='_blank' ></a>
       </li>
     </ul>
