added cool footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <a class="footer__brand" href="{{ site.url }}" title="{{ site.data.strings.title }}">
-      <img class="inject-these-svgs" src="{{ site.imgurl }}/brand.svg">
+      {% include _svg/brand.svg %}
     </a>
 
     <ul class="footer__list">
