--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -6,7 +6,7 @@ layout: default
 
   <!-- Projects list -->
   <ul class="projects__list">
-    {% assign posts = site.posts | where:"lang", page.lang | where:"category", "project" %}
+    {% assign posts = site.posts | where:"lang", page.lang | where:"category", "project" | sort: post.title %}
     <div class="row">
 
     {% for post in posts %}
