started new experint in projects page

--- a/_includes/tail.html
+++ b/_includes/tail.html
@@ -2,6 +2,8 @@
 <script>window.jQuery || document.write('<script src="{{ site.url }}/public/bower_components/jquery/jquery.min.js"><\/script>')</script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
+<script src="{{ site.url }}/public/bower_components/classie/classie.js"></script>
+
 <script src="{{ site.url }}/js/color-variables.js"></script>
 <script src="{{ site.url }}/js/functions.js"></script>
 <script src="{{ site.url }}/js/main.js"></script>
