--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="cover js-project-cover">
+<div id="container" class="cover js-project-cover">
 
   <div class="cover__info">
     <div class="container">
