--- a/_sass/partials/_project.scss
+++ b/_sass/partials/_project.scss
@@ -1,6 +1,7 @@
-.cover {
+.cover:not(notrans)  {
     position: relative;
     display: block;
+    width: 100%;
     height: 100%;
     margin: 0 0 60px;
 
@@ -9,16 +10,59 @@
 
     @include clearfix();
 
+    &:before {
+      content: "";
+
+      position: absolute;
+      width: 0;
+      height: 100%;
+      top: 0;
+      left: 0;
+
+      z-index: $z-mid-back;
+      background: $c-white;
+      transition: width 0.6s ease;
+    }
+
+    &:after {
+      content: "";
+
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      right: 0;
+
+      z-index: $z-mid-back;
+      border: 0 solid $c-white;
+      transition: border 0.6s ease;
+    }
+
     &--scrolled {
-        .cover {
-          &__image {
-            opacity: 0.25;
+          &:before { width: 50%; }
+          &:after { border: 75px solid $c-white; }
+
+          .cover {
+              &__image {
+                opacity: 0.5;
+                transform: scale(1.25,1.25);
+              }
+
+              &__title {
+                color: $c-yellow;
+                transform: translateX(-30%)
+                           scale(0.5, 0.5);
+              }
+
+              &__subtitle {
+                color: $c-orange;
+                transform: translateX(-30%)
+                           translateY(-20px)
+                           scale(0.5, 0.5);
+              }
           }
 
-          &__title { opacity: 0.25; }
 
-          &__subtitle { opacity: 0.25; }
-        }
     }
 
     &__image-clipper {
@@ -39,7 +83,8 @@
         left: 0;
 
         z-index: $z-back;
-        transition: opacity ease 0.9s;
+        transition: opacity ease 0.6s,
+                    transform ease 0.6s;
     }
 
     &__info {
@@ -63,8 +108,10 @@
 
         color: $c-white;
         text-shadow: 0 5px 0 $c-shadow-l2;
+        transform: translateX(0);
         transform: translateY(0);
-        transition: opacity ease 0.9s;
+        transition: color ease 0.6s,
+                    transform ease 0.6s;
     }
 
     &__subtitle {
@@ -77,8 +124,10 @@
 
         color: $c-white;
         text-shadow: 0 5px 0 $c-shadow-l2;
+        transform: translateX(0);
         transform: translateY(0);
-        transition: opacity ease 0.9s 0.05s;
+        transition: color ease 0.6s,
+                    transform ease 0.6s;
     }
 }
 
