--- a/_sass/partials/_project.scss
+++ b/_sass/partials/_project.scss
@@ -1,4 +1,4 @@
-.cover:not(notrans)  {
+.cover {
     position: relative;
     display: block;
     width: 100%;
@@ -38,32 +38,30 @@
       transition: border 0.6s ease;
     }
 
-    &--scrolled {
-          &:before { width: 50%; }
-          &:after { border: 75px solid $c-white; }
+/*     &--scrolled {
+    &:before { width: 50%; }
+    &:after { border: 75px solid $c-white; }
 
-          .cover {
-              &__image {
-                opacity: 0.5;
-                transform: scale(1.25,1.25);
-              }
+    .cover {
+        &__image {
+          opacity: 0.5;
+          transform: scale(1.25,1.25);
+        }
 
-              &__title {
-                color: $c-yellow;
-                transform: translateX(-30%)
-                           scale(0.5, 0.5);
-              }
+        &__title {
+          color: $c-yellow;
+          transform: translateX(-30%)
+                     scale(0.5, 0.5);
+        }
 
-              &__subtitle {
-                color: $c-orange;
-                transform: translateX(-30%)
-                           translateY(-20px)
-                           scale(0.5, 0.5);
-              }
-          }
-
-
+        &__subtitle {
+          color: $c-orange;
+          transform: translateX(-30%)
+                     translateY(-20px)
+                     scale(0.5, 0.5);
+        }
     }
+} */
 
     &__image-clipper {
         position: absolute;
