--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     <meta property="og:site_name" content="42i - Produtora Digital Independente"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="{{ site.data.strings[page.lang].description }}"/>
-    <meta property="og:locale" content="pt-br" />
+    <meta property="og:locale" content="pt_BR" />
 
     <script type="text/javascript">
       (function(d) {
