added dia da musica

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -34,6 +34,7 @@ layout: default
         <h4 class="tech-specs__title tech-specs__title--small">{{ site.data.project.[page.lang].project-link }}</h4>
         <a class="tech-specs__link" href="{{ page.project-link }}" title="{{ page.project }}" target="_blank" >{{ page.project }}</a>
         <a class="tech-specs__link" href="{{ page.project-link-2 }}" title="{{ page.project-2 }}" target="_blank" >{{ page.project-2 }}</a>
+        <a class="tech-specs__link" href="{{ page.project-link-3 }}" title="{{ page.project-3 }}" target="_blank" >{{ page.project-3 }}</a>
 
         <h4 class="tech-specs__title tech-specs__title--small">{{ site.data.project.[page.lang].client }}</h4>
         <a class="tech-specs__link" href="{{ page.client-link }}" title="{{ page.client }}" target="_blank">{{ page.client }}</a>
