--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -10,7 +10,7 @@ layout: default
     <div class="row">
 
     {% for post in posts %}
-    <div class="col-md-6">
+    <div class="col-sm-6">
       <li class="projects__item">
         <a class="project-card" href="{{ post.url }}" title="">
 
