--- a/_sass/partials/_project.scss
+++ b/_sass/partials/_project.scss
@@ -76,8 +76,11 @@
         position: relative;
         width: auto;
         min-width: 100%;
-        height: 100%;
-        top: 0;
+        max-width: 100%;
+        min-height: 100%;
+        top: 100%;
+        margin-top: -200%;
+        // top: 0;
         left: 0;
 
         z-index: $z-back;
