--- a/_sass/partials/_projects.scss
+++ b/_sass/partials/_projects.scss
@@ -35,7 +35,7 @@
         height: 100%;
 
         border: $hr-neg;
-        @include vendorize(transform, scale3d(0.98, 0.95, 1));
+        transform: scale3d(0.98, 0.95, 1);
         transition: transform $anim-bounce 0.5s;
         z-index: $z-mid-back;
     }
@@ -65,7 +65,7 @@
       left: 0;
 
       color: $c-white;
-      @include vendorize(transform, translateY(50%));
+      transform: translateY(50%);
       transition: transform $anim-bounce 0.5s,
                   color ease 0.5s;
     }
@@ -84,7 +84,7 @@
 
       color: $c-white;
       opacity: 0;
-      @include vendorize(transform, translateY(0) scale(1, 1, 1));
+      transform: translateY(0) scale(1, 1, 1);
       transition: transform $anim-bounce 0.5s 0.025s,
                   opacity ease 0.5s;
     }
@@ -97,7 +97,7 @@
       bottom: -10px;
       left: 0;
 
-      @include vendorize(opacity, 0);
+      opacity: 0;
       transition: transform $anim-bounce 0.5s 0.1s,
                   opacity ease 0.5s;
     }
@@ -125,7 +125,7 @@
   .project-card {
     height: 300px;
 
-    &:before {   @include vendorize(transform, scale3d(1, 1, 1)); }
+    &:before { transform: scale3d(1, 1, 1); }
 
     &__info {
       height: 70px;
@@ -139,40 +139,40 @@
       bottom: 0;
 
       color: $fc-title-big;
-      @include vendorize(transform, translateY(-10px));
+      transform: translateY(-10px);
     }
 
     &__subtitle { display: inline-block; }
 
-    &__image {   @include vendorize(opacity, 1); }
+    &__image { opacity: 1; }
 
     &:hover{
       .project-card {
         &__image {
-          @include vendorize(opacity, 0.25);
-          @include vendorize(transform, scale3d(1.1,1.1,1));
+          opacity: 0.25;
+          transform: scale3d(1.1,1.1,1);
         }
 
         &__info { height: 0; }
 
         &__title {
           color: $c-white;
-          @include vendorize(transform, translateY(-130px));
+          transform: translateY(-130px);
         }
 
         &__subtitle {
           opacity: 1;
-          @include vendorize(transform, translateY(-115px) scale3d(1.1, 1.1, 1));
+          transform: translateY(-115px) scale3d(1.1, 1.1, 1);
         }
 
         &__icon-group {
           opacity: 1;
-          @include vendorize(transform, translateY(-50px));
+          transform: translateY(-50px);
         }
       }
 
       &:before {
-        @include vendorize(transform, scale3d(0.875, 0.8, 1));
+        transform: scale3d(0.875, 0.8, 1);
       }
     }
   }
