--- a/_sass/partials/_project.scss
+++ b/_sass/partials/_project.scss
@@ -38,7 +38,7 @@
       transition: border 0.6s ease;
     }
 
-/*     &--scrolled {
+    /*     &--scrolled {
     &:before { width: 50%; }
     &:after { border: 75px solid $c-white; }
 
@@ -73,7 +73,7 @@
     }
 
     &__image {
-        position: fixed;
+        position: absolute;
         width: auto;
         min-width: 100%;
         height: 100%;
@@ -81,7 +81,6 @@
         left: 50%;
 
         transform: translate(-50%, -50%);
-        z-index: $z-back;
         transition: opacity ease 0.6s,
                     transform ease 0.6s;
     }
