--- a/_sass/partials/_project.scss
+++ b/_sass/partials/_project.scss
@@ -73,16 +73,10 @@
     }
 
     &__image {
-        position: absolute;
+        position: relative;
         width: auto;
         min-width: 100%;
         height: 100%;
-        top: 50%;
-        left: 50%;
-
-        transform: translate(-50%, -50%);
-        transition: opacity ease 0.6s,
-                    transform ease 0.6s;
     }
 
     &__info {
@@ -242,6 +236,16 @@
       &__subtitle {
           font-size: $fs-headline;
           line-height: $lh-headline;
+      }
+
+      &__image {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+
+          transform: translate(-50%, -50%);
+          transition: opacity ease 0.6s,
+                      transform ease 0.6s;
       }
   }
 
