--- a/_sass/partials/_home.scss
+++ b/_sass/partials/_home.scss
@@ -50,13 +50,10 @@
 	}
 
 	&__image {
-		position: absolute;
+		position: relative;
+		display: block;
 		min-width: 100%;
-		min-height: 100%;
-		top: 50%;
-        left: 50%;
-
-        transform: translate(-50%, -50%);
+		height: 100%;
 	}
 }
 
@@ -74,5 +71,15 @@
 		}
 
 		&__subtitle { font-size: 24px; }
+
+		&__image {
+			position: fixed;
+			min-width: 100%;
+			min-height: 100%;
+			top: 50%;
+	        left: 50%;
+
+	        transform: translate(-50%, -50%);
+		}
 	}
 }
