added ada lovelace post

--- a/_sass/base/_var-typography.scss
+++ b/_sass/base/_var-typography.scss
@@ -27,6 +27,7 @@ $fs-headline: 42px;
 $fs-title-big: 28px;
 $fs-title-medium: 24px;
 $fs-title-small: 20px;
+$fs-title-smallest: 16px;
 $fs-subtitle: 22px;
 
 $fs-dropcap: 36px;
