--- a/css/main-bkp-full.scss
+++ b/css/main-bkp-full.scss
@@ -1,3 +1,8 @@
+---
+# Only the main Sass file needs front matter (the dashes are enough)
+---
+
+
 @charset "UTF-8";
 /* ==========================================================================
    Normalize.scss settings
