--- a/_layouts/general.html
+++ b/_layouts/general.html
@@ -3,6 +3,10 @@ layout: default
 ---
 
 <div class="container container--small">
+  {% if page.img != null %}
+    <img class="general-img" src="{{ site.imgurl }}/{{ page.img }}" alt="{{ page.img-alt }}">
+  {% endif %}
+
   <h1 class="post__title">{{ page.title }}</h1>
   <span class="post__subtitle">{{ page.subtitle }}</span>
 
