--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
----
-# Only the main Sass file needs front matter (the dashes are enough)
----
-
 @charset "UTF-8";
 /* ==========================================================================
    Normalize.scss settings
@@ -1254,6 +1250,13 @@ th {
     color: #000; }
     .textblock p br, .textblock span br {
       line-height: 42px; }
+  .textblock blockquote {
+    font-size: 22px;
+    font-style: italic;
+    font-weight: 300;
+    display: block;
+    margin-bottom: 30px;
+    color: #9b9b9b; }
   .textblock small {
     font-size: 16px;
     font-family: "foco", Helvetica, Arial, "sans serif";
@@ -1980,7 +1983,7 @@ a {
     line-height: 42px;
     margin: 0;
     color: #FFF;
-    text-shadow: 0 5px 0 rgba(0, 0, 0, 0.1);
+    text-shadow: 0 5px 0 rgba(0, 0, 0, 0.25);
     -webkit-transform: translateX(0);
         -ms-transform: translateX(0);
             transform: translateX(0);
