--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 
     <title>{% if page.title %}{{ page.title }} | {{ site.data.strings.title }} {% else %}{{ site.data.strings[page.lang].title }}{% endif %}</title>
     <meta name="description" content="{{ site.data.strings[page.lang].description }}">
+    <meta name="google-site-verification" content="Q1VNCeOBxKjVPXLWR8YdQ6MBQmv2it9TikiFO0afnVI" />
 
     <meta property="og:image" content="http://42i.com.br/public/images/42ipintado.jpg"/>
     <meta property="og:title" content="{% if page.title %}{{ page.title }} | {{ site.data.strings.title }} {% else %}{{ site.data.strings[page.lang].title }}{% endif %}"/>
