--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,11 @@
       })(document);
     </script>
 
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+
     <link rel="stylesheet" href="{{ 'css/main.css' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="stylesheet" href="{{ 'css/levante-modal.css' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <script>
