--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,69 @@
+<div class="o-modal-tampao js-modal-tampao">
+  <div class="u-centralize-content">
+    <div class="o-modal-tampao__video-content">
+      <img src="./tampao-assets/images/levante-splash.gif" alt="Logo Levante">
+    </div>
+    <div class="o-modal-tampao__body">
+      <div class="c-brand__content">
+        <img class="c-brand" src="./tampao-assets/images/logotipo.png" alt="Logo Levante">
+      </div>
+
+      <div class="c-text-content">
+        <h1 class="c-title">
+          <div class="c-title__pre">Bem vindo à soma</div>
+          de dois universos
+        </h1>
+
+        <p>
+            Olá! Se você veio até aqui procurando pela 42i, saiba que ainda estamos aqui. Só que crescemos para conseguir produzir digital + motion sob um mesmo teto.
+        </p>
+
+        <p>Se quiser ver as coisas novas que estão rolando, siga a gente no <a href="https://www.facebook.com/levanteprodutoradigital/" target="_blank">Facebook</a> e <a href="https://www.instagram.com/levante.cx/" target="_blank">Instagram</a>. E se quiser marcar um papo com a gente, é só escrever para <a href="mailto:ola@levante.cx">ola@levante.cx</a></p>
+
+        <p>
+          Enquanto a nossa nova casa vai ficando pronta, você ainda pode conferir nossos trabalhos como produtora digital aqui mesmo!
+        </p>
+
+        <a class="c-btn-continuar js-continuar" href="#">Continuar</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+  (function() {
+    const mosdalEl = document.querySelector('.js-modal-tampao');
+    const mosdalTrigger = document.querySelector('.js-continuar');
+
+    function closeModal(e) {
+      e.preventDefault();
+      ga('send', 'event', 'Link', 'click', 'Tampão click no continuar, site 42i');
+
+      if (mosdalEl.classList.contains('o-modal-tampao--active')) {
+        // The box that we clicked has a class of bad so let's remove it and add the good class
+       mosdalEl.classList.remove('o-modal-tampao--active');
+       document.querySelector('body').style.overflowY = 'auto';
+      }
+    }
+
+    mosdalTrigger.addEventListener("click", closeModal);
+
+    (function checkSeen() {
+      // sessionStorage.removeItem("seen");
+      if (!sessionStorage.getItem("seen")) {
+        setTimeout(function(){
+          console.log(window.innerWidth);
+          document.querySelector('body').style.overflow = 'hidden';
+
+          window.onload = mosdalEl.classList.add('o-modal-tampao--active');
+          sessionStorage.setItem("seen", true);
+        }, 800);
+      }
+    })();
+
+  })();
+</script>
+
 <header class="header js-header">
   <div class="header__menu">
 
