--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,4 +40,12 @@
       ga('create', '{{ site.google_analytics }}', 'auto');
       ga('send', 'pageview');
     </script>
+  
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-2846723666169974",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
